--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 amqp==5.1.1
+arabic-reshaper==2.1.4
 asgiref==3.5.2
+asn1crypto==1.5.1
 async-timeout==4.0.2
 asyncio==3.4.3
 attrs==22.1.0
@@ -20,6 +22,7 @@ click-repl==0.2.0
 constantly==15.1.0
 crispy-bootstrap5==0.7
 cryptography==38.0.1
+cssselect2==0.7.0
 daphne==3.0.2
 Deprecated==1.2.13
 Django==4.1.1
@@ -30,11 +33,15 @@ django-sendgrid-v5==1.2.1
 django-timezone-field==5.0
 django-tinymce==3.5.0
 django-versatileimagefield==2.2
+future==0.18.2
+html5lib==1.1
 hyperlink==21.0.0
 idna==3.4
 incremental==21.3.0
 kombu==5.2.4
+lxml==4.9.1
 msgpack==1.0.4
+oscrypto==1.3.0
 packaging==21.3
 Pillow==9.2.0
 prompt-toolkit==3.0.31
@@ -43,29 +50,44 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.9.1
 pycparser==2.21
+pyHanko==0.15.1
+pyhanko-certvalidator==0.19.6
 pyOpenSSL==22.1.0
 pyparsing==3.0.9
+PyPDF3==1.0.6
+python-bidi==0.4.2
 python-crontab==2.6.0
 python-dateutil==2.8.2
 python-decouple==3.6
 python-http-client==3.3.7
 python-magic==0.4.27
 pytz==2022.5
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+qrcode==7.3.1
 razorpay==1.3.0
 redis==4.3.4
+reportlab==3.6.12
 requests==2.28.1
 service-identity==21.1.0
 sib-api-v3-sdk==7.5.0
 six==1.16.0
 sqlparse==0.4.3
 starkbank-ecdsa==2.2.0
+svglib==1.4.1
+tinycss2==1.2.1
 toml==0.10.2
+tqdm==4.64.1
 Twisted==22.8.0
 txaio==22.2.1
 typing_extensions==4.4.0
 tzdata==2022.5
+tzlocal==4.2
+uritools==4.0.0
 urllib3==1.26.12
 vine==5.0.0
 wcwidth==0.2.5
+webencodings==0.5.1
 wrapt==1.14.1
+xhtml2pdf==0.2.8
 zope.interface==5.5.0
