--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ lxml==4.9.1
 msgpack==1.0.4
 oscrypto==1.3.0
 packaging==21.3
+pdfkit==1.0.0
 Pillow==9.2.0
 prompt-toolkit==3.0.31
 psycopg2-binary==2.9.4
