--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ async-timeout==4.0.2
 asyncio==3.4.3
 attrs==22.1.0
 autobahn==22.7.1
+autoflake==1.7.7
 Automat==20.2.0
 autopep8==1.7.0
 billiard==3.6.4.0
+black==22.10.0
 celery==5.2.7
 certifi==2022.9.24
 cffi==1.15.1
@@ -29,27 +31,34 @@ Django==4.1.1
 django-celery-beat==2.4.0
 django-celery-results==2.4.0
 django-crispy-forms==1.14.0
-django-sendgrid-v5==1.2.1
 django-timezone-field==5.0
 django-tinymce==3.5.0
+django-user-sessions==1.7.1
 django-versatileimagefield==2.2
+flake8==5.0.4
 future==0.18.2
 html5lib==1.1
 hyperlink==21.0.0
 idna==3.4
 incremental==21.3.0
+isort==5.10.1
 kombu==5.2.4
 lxml==4.9.1
+mccabe==0.7.0
 msgpack==1.0.4
+mypy-extensions==0.4.3
 oscrypto==1.3.0
 packaging==21.3
+pathspec==0.10.1
 Pillow==9.2.0
+platformdirs==2.5.2
 prompt-toolkit==3.0.31
 psycopg2-binary==2.9.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.9.1
 pycparser==2.21
+pyflakes==2.5.0
 pyHanko==0.15.1
 pyhanko-certvalidator==0.19.6
 pyOpenSSL==22.1.0
@@ -59,7 +68,6 @@ python-bidi==0.4.2
 python-crontab==2.6.0
 python-dateutil==2.8.2
 python-decouple==3.6
-python-http-client==3.3.7
 python-magic==0.4.27
 pytz==2022.5
 pytz-deprecation-shim==0.1.0.post0
@@ -70,13 +78,12 @@ redis==4.3.4
 reportlab==3.6.12
 requests==2.28.1
 service-identity==21.1.0
-sib-api-v3-sdk==7.5.0
 six==1.16.0
 sqlparse==0.4.3
-starkbank-ecdsa==2.2.0
 svglib==1.4.1
 tinycss2==1.2.1
 toml==0.10.2
+tomli==2.0.1
 tqdm==4.64.1
 Twisted==22.8.0
 txaio==22.2.1
