--- a/requirements.txt
+++ b/requirements.txt
@@ -24,15 +24,19 @@ crispy-bootstrap5==0.7
 cryptography==38.0.1
 cssselect2==0.7.0
 daphne==3.0.2
+defusedxml==0.7.1
 Deprecated==1.2.13
+diff-match-patch==20200713
 Django==4.1.1
 django-celery-beat==2.4.0
 django-celery-results==2.4.0
 django-crispy-forms==1.14.0
+django-import-export==3.0.1
 django-sendgrid-v5==1.2.1
 django-timezone-field==5.0
 django-tinymce==3.5.0
 django-versatileimagefield==2.2
+et-xmlfile==1.1.0
 future==0.18.2
 html5lib==1.1
 hyperlink==21.0.0
@@ -40,7 +44,10 @@ idna==3.4
 incremental==21.3.0
 kombu==5.2.4
 lxml==4.9.1
+MarkupPy==1.14
 msgpack==1.0.4
+odfpy==1.4.1
+openpyxl==3.0.10
 oscrypto==1.3.0
 packaging==21.3
 pdfkit==1.0.0
@@ -76,6 +83,7 @@ six==1.16.0
 sqlparse==0.4.3
 starkbank-ecdsa==2.2.0
 svglib==1.4.1
+tablib==3.2.1
 tinycss2==1.2.1
 toml==0.10.2
 tqdm==4.64.1
@@ -91,4 +99,6 @@ wcwidth==0.2.5
 webencodings==0.5.1
 wrapt==1.14.1
 xhtml2pdf==0.2.8
+xlrd==2.0.1
+xlwt==1.3.0
 zope.interface==5.5.0
