--- a/requirements.txt
+++ b/requirements.txt
@@ -1,82 +1,13 @@
-amqp==5.1.1
-arabic-reshaper==2.1.4
-asgiref==3.5.2
-asn1crypto==1.5.1
-async-timeout==4.0.2
-asyncio==3.4.3
-attrs==22.1.0
-autobahn==22.7.1
-Automat==20.2.0
-autopep8==1.7.0
-billiard==3.6.4.0
-celery==5.2.7
-certifi==2022.9.24
-cffi==1.15.1
-channels==3.0.5
-channels-redis==4.0.0
-charset-normalizer==2.1.1
-click==8.1.3
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.2.0
-constantly==15.1.0
-crispy-bootstrap5==0.7
-cryptography==38.0.1
-cssselect2==0.7.0
-daphne==3.0.2
-defusedxml==0.7.1
-Deprecated==1.2.13
-diff-match-patch==20200713
-Django==4.1.1
-django-celery-beat==2.4.0
-django-celery-results==2.4.0
-django-crispy-forms==1.14.0
-django-import-export==3.0.1
-django-sendgrid-v5==1.2.1
-django-timezone-field==5.0
-django-tinymce==3.5.0
-django-versatileimagefield==2.2
-et-xmlfile==1.1.0
-future==0.18.2
-html5lib==1.1
-hyperlink==21.0.0
-idna==3.4
-incremental==21.3.0
-kombu==5.2.4
-lxml==4.9.1
-MarkupPy==1.14
-msgpack==1.0.4
-odfpy==1.4.1
-openpyxl==3.0.10
-oscrypto==1.3.0
-packaging==21.3
-pdfkit==1.0.0
-Pillow==9.2.0
-prompt-toolkit==3.0.31
-psycopg2-binary==2.9.4
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.9.1
-pycparser==2.21
-pyHanko==0.15.1
-pyhanko-certvalidator==0.19.6
-pyOpenSSL==22.1.0
-pyparsing==3.0.9
-PyPDF3==1.0.6
-python-bidi==0.4.2
-python-crontab==2.6.0
-python-dateutil==2.8.2
-python-decouple==3.6
-python-http-client==3.3.7
-python-magic==0.4.27
-pytz==2022.5
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0
-qrcode==7.3.1
-razorpay==1.3.0
-redis==4.3.4
-reportlab==3.6.12
-requests==2.28.1
-sib-api-v3-sdk==7.5.0
-six==1.16.0
-xhtml2pdf==0.2.8
+Django
+django-celery-beat
+django-celery-results
+django-crispy-forms
+django-import-export
+django-tinymce
+django-versatileimagefield
+python-decouple
+razorpay
+channels
+channels-redis
+crispy-bootstrap5
+xhtml2pdf
