--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,112 @@
-Django
-django-celery-beat
-django-celery-results
-django-crispy-forms
-django-import-export
-django-tinymce
-django-versatileimagefield
-python-decouple
-razorpay
-channels
-channels-redis
-crispy-bootstrap5
-xhtml2pdf
+amqp==5.1.1
+arabic-reshaper==2.1.4
+asgiref==3.5.2
+asn1crypto==1.5.1
+async-timeout==4.0.2
+asyncio==3.4.3
+attrs==22.1.0
+autobahn==22.7.1
+autoflake==1.7.7
+Automat==20.2.0
+autopep8==1.7.0
+billiard==3.6.4.0
+black==22.10.0
+celery==5.2.7
+certifi==2022.9.24
+cffi==1.15.1
+channels==3.0.5
+channels-redis==4.0.0
+charset-normalizer==2.1.1
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+constantly==15.1.0
+crispy-bootstrap5==0.7
+cryptography==38.0.1
+cssselect2==0.7.0
+daphne==3.0.2
+defusedxml==0.7.1
+Deprecated==1.2.13
+diff-match-patch==20200713
+Django==4.1.1
+django-celery-beat==2.4.0
+django-celery-results==2.4.0
+django-crispy-forms==1.14.0
+django-debug-toolbar==3.7.0
+django-import-export==3.0.1
+django-registration-redux==2.11
+django-timezone-field==5.0
+django-tinymce==3.5.0
+django-versatileimagefield==2.2
+django-widget-tweaks==1.4.12
+et-xmlfile==1.1.0
+flake8==5.0.4
+future==0.18.2
+html5lib==1.1
+hyperlink==21.0.0
+idna==3.4
+incremental==21.3.0
+isort==5.10.1
+kombu==5.2.4
+lxml==4.9.1
+MarkupPy==1.14
+mccabe==0.7.0
+msgpack==1.0.4
+mypy-extensions==0.4.3
+odfpy==1.4.1
+openpyxl==3.0.10
+oscrypto==1.3.0
+packaging==21.3
+pathspec==0.10.1
+Pillow==9.2.0
+platformdirs==2.5.2
+prompt-toolkit==3.0.31
+psycopg2-binary==2.9.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.9.1
+pycparser==2.21
+pyflakes==2.5.0
+pyHanko==0.15.1
+pyhanko-certvalidator==0.19.6
+pyOpenSSL==22.1.0
+pyparsing==3.0.9
+PyPDF3==1.0.6
+python-bidi==0.4.2
+python-crontab==2.6.0
+python-dateutil==2.8.2
+python-decouple==3.6
+python-magic==0.4.27
+pytz==2022.5
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+qrcode==7.3.1
+razorpay==1.3.0
+redis==4.3.4
+reportlab==3.6.12
+requests==2.28.1
+service-identity==21.1.0
+six==1.16.0
+sqlparse==0.4.3
+svglib==1.4.1
+tablib==3.2.1
+tinycss2==1.2.1
+toml==0.10.2
+tomli==2.0.1
+tqdm==4.64.1
+Twisted==22.8.0
+txaio==22.2.1
+typing_extensions==4.4.0
+tzdata==2022.5
+tzlocal==4.2
+uritools==4.0.0
+urllib3==1.26.12
+vine==5.0.0
+wcwidth==0.2.5
+webencodings==0.5.1
+wrapt==1.14.1
+xhtml2pdf==0.2.8
+xlrd==2.0.1
+xlwt==1.3.0
+zope.interface==5.5.0
