--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ django-crispy-forms==1.14.0
 django-debug-toolbar==3.7.0
 django-import-export==3.0.1
 django-registration-redux==2.11
+django-sendgrid-v5==1.2.1
 django-timezone-field==5.0
 django-tinymce==3.5.0
 django-versatileimagefield==2.2
@@ -59,6 +60,7 @@ openpyxl==3.0.10
 oscrypto==1.3.0
 packaging==21.3
 pathspec==0.10.1
+pdfkit==1.0.0
 Pillow==9.2.0
 platformdirs==2.5.2
 prompt-toolkit==3.0.31
@@ -77,6 +79,7 @@ python-bidi==0.4.2
 python-crontab==2.6.0
 python-dateutil==2.8.2
 python-decouple==3.6
+python-http-client==3.3.7
 python-magic==0.4.27
 pytz==2022.5
 pytz-deprecation-shim==0.1.0.post0
@@ -87,8 +90,10 @@ redis==4.3.4
 reportlab==3.6.12
 requests==2.28.1
 service-identity==21.1.0
+sib-api-v3-sdk==7.5.0
 six==1.16.0
 sqlparse==0.4.3
+starkbank-ecdsa==2.2.0
 svglib==1.4.1
 tablib==3.2.1
 tinycss2==1.2.1
