--- a/requirements.txt
+++ b/requirements.txt
@@ -90,6 +90,7 @@ razorpay==1.3.0
 redis==4.3.4
 reportlab==3.6.12
 requests==2.28.1
+sendgrid==6.9.7
 service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.3
