--- a/.env
+++ b/.env
@@ -9,3 +9,19 @@ DB_NAME = usklogin_db
 DB_USER = usklogin_dbuser
 DB_PASSWORD = usklogin093746819
 DB_HOST = localhost 
+
+
+EMAIL_BACKEND = django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST = smtp-relay.sendinblue.com
+EMAIL_PORT = 587
+EMAIL_HOST_USER = loginusk@gmail.com
+EMAIL_HOST_PASSWORD = D2ja7rJgAnQFTS5Z
+EMAIL_USE_TLS = True
+EMAIL_USE_SSL = False
+
+MAILGUN_FROM_EMAIL = secure.gedexo@gmail.com
+MAILGUN_DOMAIN_NAME = sandboxd8904f8fd59b40eab3139d5031e4dcaf.mailgun.org
+MAILGUN_API_KEY = 913731f1be6bac9b41e2d3f69fdf2656-69210cfc-8ba19ad2
+
+ONESIGNAL_APP_ID = 3d531d32-fe15-4b93-80b3-0746517b0021
+ONESIGNAL_SAFARI_WEB_ID = web.onesignal.auto.009a4322-838f-4341-bf26-c81fd75aa063
