--- a/.env
+++ b/.env
@@ -25,3 +25,6 @@ MAILGUN_API_KEY = 913731f1be6bac9b41e2d3f69fdf2656-69210cfc-8ba19ad2
 
 ONESIGNAL_APP_ID = 3d531d32-fe15-4b93-80b3-0746517b0021
 ONESIGNAL_SAFARI_WEB_ID = web.onesignal.auto.009a4322-838f-4341-bf26-c81fd75aa063
+
+RAZOR_PAY_KEY = rzp_live_oTpxycIg3EOxp1
+RAZOR_PAY_SECRET = 0KJnbcEIPKBlFcIS4XW80mv3
