--- a/.env
+++ b/.env
@@ -14,14 +14,14 @@ DB_HOST = localhost
 EMAIL_BACKEND = django.core.mail.backends.smtp.EmailBackend
 EMAIL_HOST = smtp-relay.sendinblue.com
 EMAIL_PORT = 587
-EMAIL_HOST_USER = loginusk@gmail.com
-EMAIL_HOST_PASSWORD = D2ja7rJgAnQFTS5Z
+EMAIL_HOST_USER = websiteusk@gmail.com
+EMAIL_HOST_PASSWORD = nAf2VQBmHIy8RX9h
 EMAIL_USE_TLS = True
 EMAIL_USE_SSL = False
 
 MAILGUN_FROM_EMAIL = secure.gedexo@gmail.com
-MAILGUN_DOMAIN_NAME = sandboxd8904f8fd59b40eab3139d5031e4dcaf.mailgun.org
-MAILGUN_API_KEY = 913731f1be6bac9b41e2d3f69fdf2656-69210cfc-8ba19ad2
+MAILGUN_DOMAIN_NAME = sandbox07de5463afd24324b26794262bad68f3.mailgun.org
+MAILGUN_API_KEY = 79e39c3f967712a31c9068495bab4966-48d7d97c-86c3c1ea
 
-ONESIGNAL_APP_ID = 3d531d32-fe15-4b93-80b3-0746517b0021
-ONESIGNAL_SAFARI_WEB_ID = web.onesignal.auto.009a4322-838f-4341-bf26-c81fd75aa063
+ONESIGNAL_APP_ID = 73c1bef7-f3a7-48ae-a453-0023334aa446
+ONESIGNAL_SAFARI_WEB_ID = web.onesignal.auto.50fac9c2-9f7f-49e4-88a1-4637f1759b35
