--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ EMAIL_HOST_PASSWORD = nAf2VQBmHIy8RX9h
 EMAIL_USE_TLS = True
 EMAIL_USE_SSL = False
 
-MAILGUN_FROM_EMAIL = secure.gedexo@gmail.com
+MAILGUN_FROM_EMAIL = websiteusk@gmail.com
 MAILGUN_DOMAIN_NAME = sandbox07de5463afd24324b26794262bad68f3.mailgun.org
 MAILGUN_API_KEY = 79e39c3f967712a31c9068495bab4966-48d7d97c-86c3c1ea
 
