--- a/.env
+++ b/.env
@@ -27,5 +27,7 @@ ONESIGNAL_APP_ID = 73c1bef7-f3a7-48ae-a453-0023334aa446
 ONESIGNAL_SAFARI_WEB_ID = web.onesignal.auto.50fac9c2-9f7f-49e4-88a1-4637f1759b35
 
 
-RAZOR_PAY_KEY = rzp_test_eY7zYJAHcBAfU0
-RAZOR_PAY_SECRET = gAiUygSY7COiPt2fKn0YxVhs
+RAZOR_PAY_KEY = rzp_live_gVsH5jNPa5C70P
+RAZOR_PAY_SECRET = DvtCIgaNoFBBaapsgv4Kb3Kr
+
+
