--- a/.env
+++ b/.env
@@ -26,8 +26,11 @@ MAILGUN_API_KEY = 79e39c3f967712a31c9068495bab4966-48d7d97c-86c3c1ea
 ONESIGNAL_APP_ID = 73c1bef7-f3a7-48ae-a453-0023334aa446
 ONESIGNAL_SAFARI_WEB_ID = web.onesignal.auto.50fac9c2-9f7f-49e4-88a1-4637f1759b35
 
+# livemode
+RAZOR_PAY_KEY = rzp_live_SvJO3ydYL9MaJm
+RAZOR_PAY_SECRET = 5A84b3wjMLfKtXTnmzXLCUl8
 
-RAZOR_PAY_KEY = rzp_live_gVsH5jNPa5C70P
-RAZOR_PAY_SECRET = DvtCIgaNoFBBaapsgv4Kb3Kr
-
+# testmode
+# RAZOR_PAY_KEY = rzp_test_Y4Qok65XufyXSM
+# RAZOR_PAY_SECRET = GYUZT09nrb8IN09dR60bw7Ec
 
