--- a/.env
+++ b/.env
@@ -14,8 +14,8 @@ DB_HOST = localhost
 EMAIL_BACKEND = django.core.mail.backends.smtp.EmailBackend
 EMAIL_HOST = smtp-relay.sendinblue.com
 EMAIL_PORT = 587
-EMAIL_HOST_USER = loginusk@gmail.com
-EMAIL_HOST_PASSWORD = D2ja7rJgAnQFTS5Z
+EMAIL_HOST_USER = mkt.usklogin@gmail.com
+EMAIL_HOST_PASSWORD = kJ2VT9yrPjNLQRFm
 EMAIL_USE_TLS = True
 EMAIL_USE_SSL = False
 
