--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ django-timezone-field==5.0
 django-tinymce==3.5.0
 django-versatileimagefield==2.2
 django-widget-tweaks==1.4.12
+docopt==0.6.2
 et-xmlfile==1.1.0
 flake8==5.0.4
 future==0.18.2
@@ -56,6 +57,7 @@ MarkupPy==1.14
 mccabe==0.7.0
 msgpack==1.0.4
 mypy-extensions==0.4.3
+num2words==0.5.12
 odfpy==1.4.1
 openpyxl==3.0.10
 oscrypto==1.3.0
@@ -90,7 +92,6 @@ razorpay==1.3.0
 redis==4.3.4
 reportlab==3.6.12
 requests==2.28.1
-sendgrid==6.9.7
 service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.3
